--- a/_portfolio/20140530.md
+++ b/_portfolio/20140530.md
@@ -18,9 +18,9 @@ title: Обследование остекления перехода
 2.	Составить техническое заключение по итогам проведенного обследования.
 
 ОРГАНИХАЦИЯ И ТЕХНОЛОГИЯ ПРОИЗВОДСТВА РАБОТ
-- 1.	Организация безопастного доступа к месту проведения обследования.
-- 2.	Осмотр, выявление дефектов и повреждений, с фиксацией их мест.
-- 3.	Сбор данных.
-- 4.	Анализ полученных результатов визуального обследования.
-- 5.	Составление заключения.
+1.	Организация безопастного доступа к месту проведения обследования.
+2.	Осмотр, выявление дефектов и повреждений, с фиксацией их мест.
+3.	Сбор данных.
+4.	Анализ полученных результатов визуального обследования.
+5.	Составление заключения.
 Фото 
