--- a/2.0_access.md
+++ b/2.0_access.md
@@ -4,6 +4,7 @@ cat: 2
 main: true
 sortid: 2.0
 submenu: true
+layout: category
 ---
 
 ### ***Обеспечим доступ в любую труднодоступную зону специалистам для обследования:***  
