--- a/1.3_.md
+++ b/1.3_.md
@@ -12,7 +12,7 @@ submenu: true
 
 Опыт работы в замкнутом пространстве, команда включает в себя высококвалифицированных специалистов замкнутого пространства, использующих передовое оборудование и технологии мирового уровня, а также инновационные решения для работы в сложных условиях.  
 
-` ` *Мы следуем правилам техники безопасности, а также учитываем правила техники безопасности, установленные на Вашем объекте.*
+` ` ***Мы следуем правилам техники безопасности, а также учитываем правила техники безопасности, установленные на Вашем объекте.***
 
 ###### отменяет действие align-left и align-right
 ### **Что обследуем?**
