--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -43,13 +43,12 @@ submenu: true
 
 ###### отменяет действие align-left и align-right
 ### **4. Определение мест утечки тепла.**  
-ВСТАВИТЬ ФОТО     
+![](/img/0/1.2.4.jpg)     
 
 ` ` Одним из важных свойств кровельных систем является сохранение тепла помещений дома. Для диагностики мест тепловых аномалий кровли (мест утечки тепла) мы используем телевизоры последнего поколения, способные уловить малейшие скачки темперы. По результатам обследования кровли тепловизером вы получаете термограмму, на которой ясно видны области потери тепла. Качественно утеплив кровлю, вы значительно уменьшите расход потребляемого тепла и сохраните бюджет.
 
 ###### отменяет действие align-left и align-right
 ### **5. Опорные металлические конструкции.**  
-ВСТАВИТЬ ФОТО  
 
 ` ` Металлические конструкции, так же требуют особого внимания. Некачественно выполненные сварные швы могут значительно повлиять на несущую конструкцию как отдельных элементов, так и всей системы кровли.  
 
@@ -68,7 +67,6 @@ submenu: true
 
 ###### отменяет действие align-left и align-right
 ### **8. Инфракрасная термография.**    
-ВСТАВИТЬ ФОТО  
 
 ` ` Метод обнаружения скопления влаги под кровельным покрытием.   
  Метод основан на принципе более медленного изменения температуры материалов, насыщенных водой, по сравнению с сухими. В дневное время солнечное тепло нагревает поверхность и все, что находится под ними, включая влагу. После захода солнца и падения температуры воздуха в ночное время, поверхность начинает отдавать тепло и остывать. Участки более низкой теплоемкости – без воды – остывают быстрее, чем места скопления влаги, что четко идентифицируется тепловизионной съемкой.  
