--- a/3.5_PEREPRAVA.md
+++ b/3.5_PEREPRAVA.md
@@ -14,7 +14,7 @@ permalink: /анкерная-линия-PEREPRAVA
 Горизонтальная гибкая анкерная линия **PEREPRAVA** компании **HIGH SAFETY** - универсальное решение для организации безопасной работы на высоте на горизонтальных поверхностях (монтаж к стене или под потолок). Может быть установлена на любой высоте (фактор падения 0). Незаменима при организации страховочной системы на подкрановых путях. 
 
 {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %} Сертификат соответствия   
-{% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %}
+{% include el-pdf.html text="Заключение Минпромторга" name="7.3.1.1. Заключение Минпромторга.pdf" %}
 {% include el-contact-form.html icon="receiver" text="Заказать" %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %} 
 
@@ -22,7 +22,7 @@ permalink: /анкерная-линия-PEREPRAVA
 {% include el-img.html name="sss/3.5.1.jpg"  %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %} 
 
--	До 7-и одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %};  
+-	До 7-и одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="files\7.3.1. ГОСТ EN TS 16415-2015.pdf" %};  
 -	Установка анкерной линии на любой высоте при факторе падения 0;  
 -	Совместима с любыми типами СИЗ втягивающего типа;  
 -	Отклонение от вертикали 300;  
