--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -9,7 +9,7 @@ permalink: /инструменты
 
 #### **В своей работе мы используем профессиональный инструмент, который прошел поверку и имеет лицензию**
 {: .uk-text-center}
-### **[Электро-искровое дефектоскоп]({% link 7.1.2.3_Buckleys.md %})**
+### **[Электро-искровой дефектоскоп]({% link 7.1.2.3_Buckleys.md %})**
 {: .uk-text-center}
 
 Дефектоскоп позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
@@ -21,12 +21,12 @@ permalink: /инструменты
 ###### &nbsp;  
 
 #### **Мокрые Крыши Про**
-**Детектор протечек Buckleys Wet Roof Pro’** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.  
- **Детектор протечек Buckleys Wet Roof Pro’** использует проводящие свойства воды (от любого дождя или шланга), чтобы точно определить протечки.
+**Электро-искровой Дефектоскоп** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.  
+**Электро-искровой Дефектоскоп** использует проводящие свойства воды (от любого дождя или шланга), чтобы точно определить места протечек.
 
 
 
-### **PST-100 искровой тестер**
+### **Искровой тестер**
 {: .uk-text-center}
  
 {% include el-img.html name="Instrument/PST100.01.png" align="left" width="1/3" %}
@@ -38,13 +38,13 @@ permalink: /инструменты
 *	Для оперативной проверки однородности сварных соединений пластиковых конструкций в химической промышленности и трубных системах;  
 *	Для проверки качества сварочного шва при экструзионной сварке полимерных геомембран.
 
-### **МТ-2007 магнитный толщиномер покрытий**
+### **Магнитный толщиномер покрытий**
 {: .uk-text-center}
 {% include el-img.html name="Instrument/МТ2007.01.jpg" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/МТ2007.02.jpg" align="left" width="1/3" %}
 ###### &nbsp;  
 
-Магнитный толщиномер покрытий МТ-2007 предназначен для измерения толщины лакокрасочных, гальванических, огнезащитных и любых других немагнитных токопроводящих и непроводящих покрытий на ферромагнитных (сталь, чугун и пр.) основаниях  
+Магнитный толщиномер покрытий предназначен для измерения толщины лакокрасочных, гальванических, огнезащитных и любых других немагнитных токопроводящих и непроводящих покрытий на ферромагнитных (сталь, чугун и пр.) основаниях  
 
 *	Измерение толщины покрытия на магнитных основаниях в широком диапазоне от 2 до 30 000 мкм  
 *	Измерение толщины ржавчины на стали, в том числе и на внутренних стенках труб (при использовании специализированных преобразователей)  
@@ -52,14 +52,14 @@ permalink: /инструменты
 *	Проведение как локальных измерений (в конкретном месте), так и непрерывных измерений - режим сканирования, при этом оператор имеет возможность оценить распределение нанесения покрытия на металл непосредственно в каждой точке сканирования  
 *	Функция вычисления среднего арифметического значения и среднеквадратичного отклонения, при этом оператору достаточно провести измерение минимум в трех точках для определения равномерности нанесения покрытия  
    
-### **Тепловизор Testo 865**
+### **Тепловизор**
 {: .uk-text-center}
 {% include el-img.html name="Instrument/Testo865.01.png" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/Testo865.02.png" align="left" width="1/3" %}
 ###### &nbsp;  
 
-Тепловизор testo 865 – профессиональный прибор, который ориентирован на решение самых важных задач для повседневной работы специалиста.  
-Область применение тепловизора Testo 865:  
+Тепловизор – профессиональный прибор, который ориентирован на решение самых важных задач для повседневной работы специалиста.  
+Область применение тепловизора:  
 1) Диагностика дефектов ограждающих конструкций и обеспечение качества строительства   
 2) Мониторинг систем отопления  
 3) Помощь при превентивной диагностике  
@@ -67,13 +67,13 @@ permalink: /инструменты
 - Быстрая локализация горячих точек  
 - Выявление аномального нагрева
      
-### **Склерометр Easy Beton CONDTROL**
+### **Склерометр**
 {: .uk-text-center}
 {% include el-img.html name="Instrument/EasyBeton.01.jpg" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/EasyBeton.02.png" align="left" width="1/3" %}
 ###### &nbsp;  
 
-Измеритель прочности Beton Easy CONDTROL предназначен для неразрушающего контроля прочности и однородности бетона методом ударного импульса по ГОСТ 22690   
+Измеритель прочности предназначен для неразрушающего контроля прочности и однородности бетона методом ударного импульса по ГОСТ 22690   
 
 Область применения прибора – определение прочности бетона, раствора, кирпича на предприятиях стройиндустрии и объектах строительства, а также при обследовании эксплуатируемых зданий и сооружений   
 Особенности и преимущества   
