--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -18,6 +18,7 @@ permalink: /инструменты
 {% include el-img.html name="Instrument/EVK.01.png" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/EVK.02.jpg" align="left" width="1/3" %}
 {% include el-img.html name="evk/EVK.jpg"  %}
+{% include el-img.html name="Instrument/EVK.jpg" %}
 ###### &nbsp;  
 
 **Электро-искровой Дефектоскоп** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.  
@@ -29,6 +30,7 @@ permalink: /инструменты
  
 {% include el-img.html name="Instrument/PST100.01.png" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/PST100.02.jpg" align="left" width="1/3" %}
+{% include el-img.html name="Instrument/PST.jpg" %}
 ###### &nbsp;  
 
 **Применение:**
@@ -40,6 +42,7 @@ permalink: /инструменты
 {: .uk-text-center}
 {% include el-img.html name="Instrument/МТ2007.01.jpg" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/МТ2007.02.jpg" align="left" width="1/3" %}
+{% include el-img.html name="Instrument/МТ.jpg" %}
 ###### &nbsp;  
 
 Магнитный толщиномер покрытий предназначен для измерения толщины лакокрасочных, гальванических, огнезащитных и любых других немагнитных токопроводящих и непроводящих покрытий на ферромагнитных (сталь, чугун и пр.) основаниях  
@@ -54,6 +57,7 @@ permalink: /инструменты
 {: .uk-text-center}
 {% include el-img.html name="Instrument/Testo865.01.png" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/Testo865.02.png" align="left" width="1/3" %}
+{% include el-img.html name="Instrument/Testo.jpg" %}
 ###### &nbsp;  
 
 Тепловизор – профессиональный прибор, который ориентирован на решение самых важных задач для повседневной работы специалиста.  
@@ -69,6 +73,7 @@ permalink: /инструменты
 {: .uk-text-center}
 {% include el-img.html name="Instrument/EasyBeton.01.jpg" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/EasyBeton.02.png" align="left" width="1/3" %}
+{% include el-img.html name="Instrument/EasyBeton.jpg" %}
 ###### &nbsp;  
 
 Измеритель прочности предназначен для неразрушающего контроля прочности и однородности бетона методом ударного импульса по ГОСТ 22690   
@@ -84,6 +89,7 @@ permalink: /инструменты
 {: .uk-text-center}
 {% include el-img.html name="Instrument/vik.01.jpg" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/vik.02.jpg" align="left" width="1/3" %}
+{% include el-img.html name="Instrument/vik.jpg" %}
 ###### &nbsp;  
 
 Набор НТЦ Эксперт ВИК разработан для **профессионального контроля производственных объектов.** Значительно оптимизирован по функционалу и качеству измерительного инструмента. Набор комплектуется сертификатом о калибровке и флешкой, содержащей образцы техкарт, актов и журналов ВИК. 
