--- a/7.1.2.3_Buckleys.md
+++ b/7.1.2.3_Buckleys.md
@@ -4,7 +4,7 @@ cat: 7
 main: false
 submenu: false
 layout: buffer
-permalink: /Электро-искровой дефектоскоп
+permalink: /Детектор протечек Buckleys Wet Roof Pro’
 ---
 
 
