--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -6,6 +6,25 @@ submenu: false
 layout: buffer
 permalink: /электро-векторное-картирование
 ---
+{% include el-img.html name="0/1.2.1.jpg"  %} 
+
+Вашему вниманию предоставляем новейший метод нахождения протечек кровли - __[Электро-искровое дефектоскопирование]({% link 7.1.2.0_evk.md %})__, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.    
+ Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места повреждений покрытия.     
+ На сегодняшний день __Электро-искровое дефектоскопирование единственный наиболее эффективный способ__ находить повреждения гидроизоляции, прежде чем вода начнет своё разрушительное воздействие.
+ 
+___*Альтернативное название этого метода - метод ЭВК Электро-векторное картирование___  
+
+#### [Тестирование мембраны плоской крыши перед укладкой эксплуатирующих слоев]({% link 7.1.2.0_evk.md %})
+ а) Система эксплуатируемой крыши с зелеными насаждениями.  
+ б) Система устройства эксплуатируемой крыши с тротуарами и пешеходными зонами.  
+ в) Система неэксплуатируемой инверсионной крыши.  
+ г) Система неэксплуатируемой балластной крыши.  
+  
+* **[Электро-искровой дефектоскоп]({% link 7.1.2.3_Buckleys.md %})**  
+* **Завершающий этап проверки [(Карта дефектов на кровле)]({% link 7.1.2.2_final_step.md %})**  
+
+{% include el-img.html name="evk/KDK.001.png" align="left" width="1/2" %}
+
 
 Вашему вниманию предоставляем новейший метод нахождения протечек кровли - **Электро-векторное картирование**, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
 
