--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -74,6 +74,9 @@ ___*(цель: качественная оценка монтажа кровел
 {% include el-img.html name="0/1.2.4.jpg" align="left" width="1/2" %}     
 
 Одним из важных свойств кровельных систем является сохранение тепла помещений дома. Для диагностики мест тепловых аномалий кровли (мест утечки тепла) мы используем телевизоры последнего поколения, способные уловить малейшие скачки темперы. По результатам обследования кровли тепловизером вы получаете термограмму, на которой ясно видны области потери тепла. Качественно утеплив кровлю, вы значительно уменьшите расход потребляемого тепла и сохраните бюджет.
+###### &nbsp; 
+__1) Тепловизионное обследование мест утечеки тепла__  
+*Цена: уточнить у менеджера.
 
 ###### &nbsp;  
 ### **5. Опорные металлические конструкции.**  
